--- a/index.html
+++ b/index.html
@@ -1,74 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Work Day Scheduler</title>
-  </head>
-
-  <body>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
+</head>
+<body>
     <header class="p-5 mb-4 border-5 border-bottom border-dark text-center">
-      <h1 class="display-3">Work Day Time Manager</h1>
-      <p class="lead">Let me help you schedule your work day!</p>
-      <p id="currentDay" class="lead"></p>
+        <h1 class="display-3">Your Work Day Organzied</h1>
+        <p class="lead">Maximize Productivitiy for your Work Day</p>
+        <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container-lg px-5">
-      <!-- Time blocks for standard business hours (9 AM to 5 PM) -->
-      <div class="container">
-        <!-- Repeat this structure for each hour -->
+    <div class="container">
+        <!-- Time Blocks from 9 AM to 5 PM -->
         <div id="hour-9" class="row time-block">
-          <div class="col-md-1 hour">9AM</div>
-          <textarea class="col-md-10 description"></textarea>
-          <button class="btn saveBtn col-md-1">
-            <i class="fas fa-save"></i>
-          </button>
+            <div class="col-md-1 hour">9 AM</div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-
+        <!-- Repeat structure for each hour until 5 PM -->
         <div id="hour-10" class="row time-block">
-          <div class="col-md-1 hour">10AM</div>
-          <textarea class="col-md-10 description"></textarea>
-          <button class="btn saveBtn col-md-1">
-            <i class="fas fa-save"></i>
-          </button>
+            <div class="col-md-1 hour">10 AM</div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-
-        <!-- ... Repeat for each hour until 5 PM ... -->
-
+        <div id="hour-11" class="row time-block">
+            <div class="col-md-1 hour">11 AM</div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="hour-12" class="row time-block">
+            <div class="col-md-1 hour">12 PM</div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="hour-13" class="row time-block">
+            <div class="col-md-1 hour">1 PM</div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="hour-14" class="row time-block">
+            <div class="col-md-1 hour">2 PM</div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="hour-15" class="row time-block">
+            <div class="col-md-1 hour">3 PM</div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+        <div id="hour-16" class="row time-block">
+            <div class="col-md-1 hour">4 PM</div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
         <div id="hour-17" class="row time-block">
-          <div class="col-md-1 hour">5PM</div>
-          <textarea class="col-md-10 description"></textarea>
-          <button class="btn saveBtn col-md-1">
-            <i class="fas fa-save"></i>
-          </button>
+            <div class="col-md-1 hour">5 PM</div>
+            <textarea class="col-md-10 description"></textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-      </div>
     </div>
 
-    <!-- jQuery -->
+    <!-- jQuery and Day.js -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <!-- Day.js -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
-      crossorigin="anonymous"
-    ></script>
-    <!-- Custom Script -->
-    <script src="script.js"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"></script>
+    <script src="./assets/script.js"></script>
+    
+</body>
 </html>
+
