--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <textarea class="col-md-10 description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <!-- Repeat structure for each hour until 5 PM -->
+        <!-- Repeated structure for each hour until 5 PM -->
         <div id="hour-10" class="row time-block">
             <div class="col-md-1 hour">10 AM</div>
             <textarea class="col-md-10 description"></textarea>
@@ -66,7 +66,6 @@
         </div>
     </div>
 
-    <!-- jQuery and Day.js -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"></script>
     <script src="./assets/script.js"></script>
